--- a/app/tpls/home/index.html
+++ b/app/tpls/home/index.html
@@ -1,6 +1,7 @@
 <style type="text/css">
 </style>
 <div ng-controller="projectCtrl">
-    <div ng-click="fadeOut()" style="position:relative;z-index: 104" ng-include="'../tpls/home/topbar.html'"></div>
+    <!-- <div ng-click="fadeOut()" style="position:relative;z-index: 104" ng-include="'../tpls/home/topbar.html'"></div> -->
+    <div ng-click="fadeOut()" style="position:relative;z-index: 104" ui-view="topbar"></div>
     <div ui-view="main" style="position:absolute; width: 100%; top:50px; bottom: 0px;overflow: hidden "></div>    
 </div>
