--- a/app/tpls/home/topbar.html
+++ b/app/tpls/home/topbar.html
@@ -2,7 +2,7 @@
 </style>
 <div class="topbar">
 	<div class="floatleft leftMenu">
-        <a class="topbarLink" href="" ui-sref="index">用例</a>
+        <a class="topbarLink" href="" ui-sref="index.usecase">用例</a>
         <a class="topbarLink" href="" ui-sref="index.demand">需求</a>        
 		<a class="topbarLink" href="" ui-sref="index.bug">缺陷</a>
 		<a class="topbarLink" ng-class="{'current':isAttribute==0}" href="" ui-sref="index.component">组件</a>
