--- a/app/tpls/modal/createCompenent.html
+++ b/app/tpls/modal/createCompenent.html
@@ -8,12 +8,10 @@
         <li>
             <h1>组件名称：</h1>
             <input type="text" class="inputText">
-            <span class="error">邀请码格式错误</span>
         </li>
         <li>
             <h1>组件版本：</h1>
             <input type="text" class="inputText">
-            <span class="error">邀请码格式错误</span>
         </li>
         <div class="clear"></div>
         <li class="floatleft">
@@ -36,17 +34,19 @@
         <li>
             <h1>继承组件：</h1>
             <input type="text" class="inputText">
-            <span class="error">邀请码格式错误</span>
         </li>
         <li>
             <h1>详细描述：</h1>
             <input type="text" class="inputText">
-            <span class="error">邀请码格式错误</span>
         </li>
         <li>
             <h1>脚本名：</h1>
-            <input type="text" class="inputText">
-            <span class="error">邀请码格式错误</span>
+            <input type="text" class="inputText floatleft" style="width: 365px;
+            margin-right: 7px;">
+            <div class="floatleft" style="position: relative;">
+                <input type="button" name="" value="选择脚本" class="btndefault btndefault_blue">
+                <input style="opacity: 0;position: absolute;left: 0px;top: 0px;width: 108px;bottom: 0px;" type="file" name="" value="选择脚本" class="">
+            </div>
         </li>
     </ul>
 </div>
