--- a/app/tpls/home/main/bug/projectBugDetail.html
+++ b/app/tpls/home/main/bug/projectBugDetail.html
@@ -150,20 +150,18 @@
         <div class="detailAttribute" ng-show="isAttribute==3">
             <table class="table-fullborder">
                 <tr>
-                    <th>参数名称</th>
-                    <th>值</th>
-                    <th>是否只读</th>
-                    <th>描述</th>
-                    <th>复制数据字典项</th>
-                    <th>字典项值</th>
+                    <th>操作人</th>
+                    <th>操作类别</th>
+                    <th>操作时间</th>
+                    <th>备注</th>
+                    
                 </tr>
                 <tr>
-                    <td>1</td>
-                    <td>错误提示</td>
-                    <td>root</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>754407439</td>
+                    <td>待审</td>
+                    <td>2017-08-22 11:54</td>
+                    <td>下一处理人是：banking</td>
+                   
                 </tr>
             </table>
         </div>
