--- a/app/tpls/home/main/testset/testsetManage.html
+++ b/app/tpls/home/main/testset/testsetManage.html
@@ -31,7 +31,7 @@
                     <i class="iconfont icon-import"></i>粘贴
                 </span>
                 <span class="chatIconButton">
-                    <i class="iconfont icon-daochu2"></i>删除
+                    <i class="iconfont icon-empty_fill"></i>删除
                 </span>
                 <div class="clear"></div>
             </div>
