--- a/app/tpls/home/projectNav.html
+++ b/app/tpls/home/projectNav.html
@@ -7,7 +7,7 @@
     </div>
     <div class="useCaseTree useCaseTree1">
         <div class="title">
-            组件组
+           	 用例组
             <span class="chatIconButton floatright treefunicon" data-tip="删除节点">
                 <i class="iconfont icon-empty"></i>
             </span>
