--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/angular-ui-tree.min.css">
     <link rel="stylesheet" type="text/css" href="css/ui-grid.min.css">
     <link rel="stylesheet" type="text/css" href="css/angular-resizable.css">
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_371097_6qmq40vb5rlo9a4i.css">
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_371097_sl8f3pxx6qn6ogvi.css"/>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/common.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css">
