--- a/app/tpls/home/main/task/task.html
+++ b/app/tpls/home/main/task/task.html
@@ -1,8 +1,8 @@
 <style type="text/css">
 </style>
-<div class="projectBodyBox" ng-controller="modalCtrl">
+<div class="projectBodyBox" ng-controller="taskCtrl">
     <div class="projectBodyTitle">
-        用例管理
+        任务名称
     </div>
     <div class="useCaseListfunc clearfix">
         <div class="dropdownDefault floatleft" dropdown>
@@ -60,8 +60,7 @@
             </div>
             <div class="userCaseListTable">
                 <div style="" ui-grid="gridOptionsUsecase" ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
-            </div>
-            
+            </div>            
         </div>
     </div>
 </div>
