--- a/app/tpls/home/main/usecase/manual.html
+++ b/app/tpls/home/main/usecase/manual.html
@@ -2,7 +2,7 @@
 </style>
 <div class="projectBodyBox" ng-controller="modalCtrl">
     <div class="projectBodyTitle">
-        用例管理
+        用例管理2
     </div>
     <div class="useCaseListfunc clearfix">
         <div class="dropdownDefault floatleft" dropdown>
