--- a/app/tpls/modal/createCompenent.html
+++ b/app/tpls/modal/createCompenent.html
@@ -43,9 +43,14 @@
             <input type="text" class="inputText">
             <span class="error">邀请码格式错误</span>
         </li>
-        <li>
+       <li>
             <h1>脚本名：</h1>
-            <input type="text" class="inputText">
+            <input type="text" class="inputText floatleft" style="width: 365px;
+            margin-right: 7px;">
+            <div class="floatleft" style="position: relative;">
+                <input type="button" name="" value="选择脚本" class="btndefault btndefault_blue">
+                <input style="opacity: 0;position: absolute;left: 0px;top: 0px;width: 108px;bottom: 0px;" type="file" name="" value="选择脚本" class="">
+            </div>
             <span class="error">邀请码格式错误</span>
         </li>
     </ul>
