--- a/app/tpls/modal/runningDevice.html
+++ b/app/tpls/modal/runningDevice.html
@@ -15,36 +15,30 @@
         <div class="runningDeviceBox">
             <div class="leftPanel">
                 <div class="leftTopPanel">
-                    <ul class="attributeList attributeList1 attributeList3">
+                    <ul class="titleUl">
                         <li>
-                            <span class="attributeLeft">
-                        		运行名称：
-                            </span>
-                            <input type="text" name="" class="inputText">
+                            <h1>运行名称：</h1>
+                            <input type="text" name="" id="" value="" class="inputText" required="required" />
                         </li>
                         <li>
-                            <span class="attributeLeft">
-                        		测试集名称：
-                            </span>
-                            <input type="text" name="" class="inputText">
+                            <h1>测试集名称：</h1>
+                            <input type="text" name="" id="" value="" class="inputText" required="required" />
                         </li>
-                        <li>
-                            <span class="attributeLeft">
-                        		关联轮次：
-                            </span>
-                            <select class="selectBox">
-                                <option>登录模块</option>
-                                <option>注册模块</option>
+                        <div class="clear"></div>
+                        <li class="">
+                            <h1>关联轮次：</h1>
+                            <select class="selectNormal">
+                                <option>状态1</option>
+                                <option>状态2</option>
+                                <option>状态3</option>
                             </select>
                         </li>
                         <li>
-                            <div class="defaultcheckBox"><input class="floatleft" type="checkbox" name=""><em>组件运行失败，关联数据池数据恢复</em></div>
+                            <div class="defaultcheckBox"><input class="floatleft" type="checkbox" name=""><em>是否连续添加</em></div>
                         </li>
                         <li>
-                            <span class="attributeLeft">
-                        		描述：
-                            </span>
-                            <input type="text" name="" class="inputTetx">
+                            <h1>需求描述：</h1>
+                            <input type="text" name="" id="" value="" class="inputText" required="required" />
                         </li>
                     </ul>
                 </div>
