--- a/app/tpls/home/main/bug/projectBugManage.html
+++ b/app/tpls/home/main/bug/projectBugManage.html
@@ -182,7 +182,7 @@
                 <div class="clear"></div>
             </div>
             <div class="userCaseListTable">
-                <div ui-grid="gridOptionsBug" ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+                <div ui-grid="gridOptionsBug" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
             </div>
         </div>
     </div>
