--- a/app/tpls/home/main/statement/statementManage.html
+++ b/app/tpls/home/main/statement/statementManage.html
@@ -60,7 +60,7 @@
     <div class="projectBodyContent" style="top: 100px;" ng-controller="statementCtrl">
         <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
             <div class="userCaseListTable">
-                <div ui-grid="gridOptionsStatement" ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+                <div ui-grid="gridOptionsStatement" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
             </div>
             
         </div>
