--- a/app/tpls/home/topbarProject.html
+++ b/app/tpls/home/topbarProject.html
@@ -2,14 +2,7 @@
 </style>
 <div class="topbar">
 	<div class="floatleft leftMenu">
-        <a class="topbarLink" href="" ui-sref="index.project">项目列表</a>
-		<a class="topbarLink" href="" ui-sref="index.task">任务</a>
-		<a class="topbarLink" ng-class="{'current':isAttribute==0}" href="" ui-sref="index.component">组件</a>
-		 <a class="topbarLink" href="" ui-sref="index.demand">需求</a>
-        <a class="topbarLink" href="" ui-sref="index.usecase">用例</a>
-        <a class="topbarLink" href="" ui-sref="index.testset">测试集</a>       
-		<a class="topbarLink" href="" ui-sref="index.bug">缺陷</a>		        
-		<a class="topbarLink" href="" ui-sref="index.statement">统计</a>
+		<a class="topbarLink" href="" ui-sref="index.task">AR</a>
 	</div>
 	<div class="floatright rightMenu">		
         <div class="dropdownDefault floatleft" dropdown>
