--- a/app/tpls/home/main/demand/projectDemandManage.html
+++ b/app/tpls/home/main/demand/projectDemandManage.html
@@ -54,7 +54,7 @@
                 <div class="clear"></div>
             </div>
             <div class="userCaseListTable">
-                <div ui-grid="gridOptionsDemand"  ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+                <div ui-grid="gridOptionsDemand" ui-grid-autoResize  ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
             </div>
             
         </div>
