--- a/app/tpls/home/main/testset/testsetManage.html
+++ b/app/tpls/home/main/testset/testsetManage.html
@@ -36,7 +36,7 @@
                 <div class="clear"></div>
             </div>
             <div class="userCaseListTable">
-                <div ui-grid="gridOptionsTestset"  ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+                <div ui-grid="gridOptionsTestset"  ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
             </div>
         </div>
     </div>
